2014-03-09  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_trailer): Fix segfault. The code which
	helps implement the special interaction between @(accept) and
	@(trailer) was not handling the situation when there is not
	current unwind exit point.

2014-03-09  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Syntactic tweak. Do not allow the "extra"
	constituent chars # or ^ to start the symbol name after an @.
	Prior to this change @^a is a "meta-symbol" whose name is "^a",
	but ^a is the ^ quasiquote notation followed by symbol a.
	After this change @^a is meta, applied to quasiquote-a.

2014-03-09  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (lazy_sub_str): Bugfix: "from" was mistakenly used
	in the adjustment of the "to" value.

	* match.c (search_form): Use predefined constants for -1 and 1
	instead of calling num.

2014-03-09  Kaz Kylheku  <kaz@kylheku.com>

	Fixing broken processing of horizontal matching across
	long lines produced by @(freeform). Once the matching
	passes about 4000 characters, the "consume_prefix"
	function kicks in to save memory. Then any code which is
	not properly written to handle this displaced situation
	will break.

	* match.c (h_text, h_var, h_coll, h_parallel, h_fun): Bugfix.
	The recursive calls to match_line return an absolute position.
	From this value we must subtract c->base if we are to 
	compare it with c->pos, or update c->pos.  If we use the
	absolute value, we are abruptly jumping ahead in the data.

2014-03-08  Kaz Kylheku  <kaz@kylheku.com>

	Issue: match_regex and search_regex were continuing to feed characters
	to the regex machine even when there is no transition available.  This
	was due to the broken return value protocol of regex_machine_feed.  For
	instance for the regex / +/ (one or more spaces), after matching some
	spaces, it would report REGM_INCOMPLETE for additional non-space
	characters, never reporting REGM_FAIL.

	* regex.c (regm_result_t): Block comment added, documenting protocol.